[package]
name = "kq_cx"
version = "1.0.1"
edition = "2021"
publish = false
authors = [ 'Giancarlo A. Chiappe' ]

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
pgrx = { version = "=0.11.4", default-features = false }
heapless = "=0.7.17"

[dev-dependencies]
pgrx-tests = "=0.11.4"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
