[package]
name = "kq_cx"
version = "1.0.2"
edition = "2021"
publish = false
authors = [ 'Giancarlo A. Chiappe' ]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_kq_cx"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
pgrx = { version = "0.12.8", default-features = false }
heapless = "0.8"

[dev-dependencies]
pgrx-tests = "0.12.8"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
# opt-level = 3
# lto = "fat"
# codegen-units = 1
